跨域请求的解决方法-CORS

--- a/css/css-kaodian12-28/7.html
+++ b/css/css-kaodian12-28/7.html
@@ -24,6 +24,12 @@
       background-color: lightgreen;
       overflow: auto; /* 创建 BFC */
   }
+  .float-box:hover {
+      background-color: lightcoral;
+  }
+  .float-box:active {
+      background-color: purple;
+  }
   </style>
 </head>
 <body>
