--- a/vue-react12-19/todoList12-26/index.html
+++ b/vue-react12-19/todoList12-26/index.html
@@ -7,14 +7,15 @@
 </head>
 <body>
     <h2 id="app"></h2>
-    <input ytype="text" id="todo-input">
+    <input type="text" id="todo-input">
     <script>
         var app = document.getElementById("app");
         var todoInput = document.getElementById("todo-input");
 
-        todoInput.addEventListener('keyup',function(){
+        todoInput.addEventListener('input',function(){
             var val = event.target.value;
             console.log(val,todoInput.value,this.value);
+            app.innerHTML = val;
         })
     </script>
 </body>
