AI助手界面构造

--- a/deepseek/ai-assistant/static/index.html
+++ b/deepseek/ai-assistant/static/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deepseek AI 助手</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body><div class="chat-container">
-    <!-- 左侧：聊天记录 -->
-    <div class="chat-left"></div>
-    <!-- 右侧：对话历史和设置 -->
-    <div class="chat-right"></div>
-</div>
+
+<body>
+    <div class="chat-container">
+        <!-- 左侧：聊天记录 -->
+        <div class="chat-left">
+            <i class="fas fa-comment-alt">Nova超智</i>
+            <!-- chat has-messages 方便复用 维护  -->
+            <!-- tailwindcss就是原子样式 -->
+            <div id="chat-log" class="chat has-messages">
+                <!-- 默认隐藏，询问时出现 -->
+                <div class="loading-indicator">加载中... </div>
+                <!-- 先设置大盒子   -->
+                <div class="input-area">
+                    <!-- 再搞小盒子 -->
+                    <div class="input-with-icon">
+                        <!-- textarea多行输入 -->
+                        <textarea row="4" id="message" placeholder="在这里输入您的消息..."></textarea>
+                        <button class="send-icon"><i class="fas fa-paper-plane"></i></button>
+                    </div>
+                </div>
+                <button id="back-to-top" class="back-to-top"><i class="fas fa-arrow-up"></i></button>
+            </div>
+        </div>
+        <!-- <i class="icon-aislogo">Nova超智</i> -->
+        <!-- 右侧：对话历史和设置 -->
+        <div class="chat-right">
+            <div class="top-nav">
+                <button class="button secondary">新对话<i class="fas fa-redo"></i></button>
+                <button class="button secondary">保存对话<i class="fas fa-save"></i></button>
+            </div>
+        </div>
+    </div>
     <script src="js/common.js"></script>
 </body>
+
 </html>
