--- a/deepseek/ai-assistant/static/index.html
+++ b/deepseek/ai-assistant/static/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/favicon.png" type="image/png">
     <title>Deepseek AI 助手</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -19,9 +20,8 @@
             <div id="chat-log" class="chat-log has-messages">
                 <!-- 占位内容 -->
             <!-- 加载指示器 -->
-            <div class="loading-indicator">加载中...</div>
+            <div class="loading-indicator">加载中，请稍后...</div>
                 <!-- 默认隐藏，询问时出现 -->    
-            <!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
         </div>
         
             <!-- 先设置大盒子   -->
@@ -42,10 +42,24 @@
         <!-- <i class="icon-aislogo">Nova超智</i> -->
         <!-- 右侧：对话历史和设置 -->
         <div class="chat-right">
-            <div class="top-nav">
-                <button class="button secondary">新对话 <i class="fas fa-redo-alt"></i></button>
-                <button class="button secondary">保存对话 <i class="fas fa-save"></i></button>
-            </div>
+            <nav class="top-nav">
+                <button class="button secondary" onclick="startNewConversation()">新对话 <i class="fas fa-redo-alt"></i></button>
+                <button class="button secondary" onclick="saveCurrentConversation()">保存对话 <i class="fas fa-save"></i></button>
+            </nav>
+            <!-- 对话历史 -->
+             <div id="conversation-list"></div>
+             <div class="input-group">
+                <!-- 无障碍访问 -->
+                <label for="temperature">创意度(0-1.5):</label>
+                <input type="number" id="temperature" placeholder="请输入创意度" step="0.1" min="0" max="1.5">
+             </div>
+             <div class="input-group">
+                <label for="model">模式选择：</label>
+                <select id="model">
+                    <option value="deepseek-chat">对话模式</option>
+                    <option value="deepseek-coder">编码模式</option>
+                </select>
+             </div>
         </div>
     </div>
     <script src="js/common.js"></script>
