--- a/study-diff/www/index.html
+++ b/study-diff/www/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <button id="btn">按我修改DOM</button>
     <div id="container">
     </div>
     <script src="/xuni/bundle.js"></script>
